# Sampler3D

./: .gitignore  LICENSE
MC/: ANTIGRAVITY.md  CMakeLists.txt  README.md
MC/include/: alias_method.h  octree.h  pcg64.h  pcg64_openmp.h  sampler.h
MC/src/: alias_method.cpp  main.cpp  octree.cpp  sampler.cpp
MC/tests/: test_alias.cpp  test_octree.cpp  test_pcg64.cpp  test_sampler.cpp
